--- a/style.css
+++ b/style.css
@@ -1,26 +1,62 @@
-img {
-    width: 200px;
-    height: 300px;
-  }
-  
+#header{
+  width:100%;
+  border-radius:20px;
+  height:10rem;
+  background-image:linear-gradient(to right, lightgreen, skyblue); 
+}
+
+#header > p {
+  width:100%;
+  color:white;
+  text-align: center;
+  font-size:100px;
+  margin:0;
+}
+
+.images{
+  margin-top:10px;
+  width:100%;
+  height:35rem;
+  border-radius:20px;
+}
+
+.images > img{
+  width:100%;
+  height:100%;
+  border-radius:20px;
+}
+
   p {
     color: black;
     font-weight: bold;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
+
+  img {
+    border-radius:40px;
+    width: 400px;
+    height: 600px;
+  }
   
   iframe {
-    height: 300px;
+    border-radius:20px;
+    height: 600px;
+    border:0;
+    margin-left:10px;
     aspect-ratio: 16 / 9;
   }
   
   body {
-    background-color: whitesmoke;
+    background-image: linear-gradient(lightgrey,whitesmoke) no-repeat;
   } 
 
 #searchbar{
-  width: 100vw;
-  height: 5vw;
+  display:block;
+  margin-right:auto;
+  margin-left:auto; 
+  margin-top:10px;
+  width: 100%;
+
 }
 
   select{
@@ -45,4 +81,8 @@ img {
   input{
     font-size: 1rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  br{
+    margin:0;
   }
